Adicionando V1 no UnusualController
